<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, PictureCompressActivity!</string>
    <string name="app_name">PictureCompress</string>
    <string name="compression_type">Compression Type</string>
    <string name="androids">Androids Compression</string>
    <string name="loss_param">Loss Parameter</string>
    <string name="settings">Settings</string>
    <string name="select_pic">From Gallery</string>
    <string name="take_pic">Take Picture</string>
    <string name="compression_values">Compression Values</string>
    
    <string name="loss_param_summary">Select the loss parameter (Quantization)</string>
    <string name="bitmap_val_summary">Enter a number between 0 and 99</string>
    <string name="original_sel">Original Selection</string>
    <string name="android_sel">Android Compression</string>
    <string name="comp_sel">Compressed Image</string><string name="droid_comp_val">Bitmap Compression Value</string><string name="bitmap_curr_val">Current Value: %1$d</string>
    <string name="loss_param_val">p =%1$d</string>
    
    
    <string name="file_size">File Size = %1$d bytes</string>
    <string name="colors">Colors</string>
    <string name="dct">DCT</string>
    <string name="color_sel">Color Selection</string>
    <string name="welcome">WELCOME!!!</string>
    <string name="matrix_type">Quantization Matrix Type</string>
    <string name="matrix_sel">Quantization Matrix Selection</string>

</resources>