<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/flipper"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/originalView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TextView
            android:id="@+id/originalTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/original_sel"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" >

            <ImageView
                android:id="@+id/originalImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:contentDescription="@string/original_sel"
                android:scaleType="centerInside" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" >

            <TextView
                android:id="@+id/originalInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/original_sel" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/compressView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TextView
            android:id="@+id/compressTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comp_sel"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" >

            <ImageView
                android:id="@+id/compressImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:contentDescription="@string/comp_sel"
                android:scaleType="centerInside"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" >

            <TextView
                android:id="@+id/compressInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comp_sel" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/androidView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TextView
            android:id="@+id/androidTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/android_sel"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" >

            <ImageView
                android:id="@+id/androidImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:contentDescription="@string/original_sel"
                android:scaleType="centerInside" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" >

            <TextView
                android:id="@+id/androidInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android_sel" />
        </RelativeLayout>
    </RelativeLayout>

</ViewFlipper>